fix fdo#58451

I introduced this bug during my "shiny UNO" conversions.
We pass around SQLException as an Any in the IDL, so we need to treat
it like that it the service code.

Change-Id: Ib55b1e156c93fb1488b21ab4d1423b25cb13a5cf