dbaccess/source/ui/uno/unosqlmessage.cxx
@@ -100,13 +100,13 @@ void OSQLMessageDialog::initialize(Sequence<Any> const & args) throw (com::sun::
 {
   OUString title;
   Reference< com::sun::star::awt::XWindow > parentWindow;
-  Reference< com::sun::star::sdbc::SQLException > sqlException;
+  com::sun::star::uno::Any sqlException;
 
   if ((args.getLength() == 3) && (args[0] >>= title) && (args[1] >>= parentWindow) && (args[2] >>= sqlException)) {
     Sequence<Any> s(3);
     s[0] <<= PropertyValue( "Title", -1, makeAny(title), PropertyState_DIRECT_VALUE);
     s[1] <<= PropertyValue( "ParentWindow", -1, makeAny(parentWindow), PropertyState_DIRECT_VALUE);
-    s[2] <<= PropertyValue( "SQLException", -1, makeAny(sqlException), PropertyState_DIRECT_VALUE);
+    s[2] <<= PropertyValue( "SQLException", -1, sqlException, PropertyState_DIRECT_VALUE);
     OGenericUnoDialog::initialize(s);
   } else {
     OGenericUnoDialog::initialize(args);
